--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,26 @@
 body{
     background-color: --main-background;
     font-family: "Roboto", sans-serif;
-    color:var(--main-subtitle-color)
+    color:var(--main-subtitle-color);
+    margin: 0;
 }
 
 .list{
 list-style: none;
+padding: 0;
+margin: 0;
+
 }
 .link{
     text-decoration: none;
+}
+.container{
+    max-width: 1158px;
+    margin: 0 auto;
+    outline: 1px solid tomato;
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
 
 .visually-hidden {
@@ -36,23 +48,67 @@ list-style: none;
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-    /* header */
 
+h1,h2,h3,h4,p,ul {
+margin:0;}
+
+img{
+    display:block;
+    max-width:100%;
+    height: auto;
+} 
+    /* header */
+.header{
+    border-bottom:1px solid #E7E9FC;
+    padding: 24px;
+ 
+}
 .header-logo {
     color: inherit;
     font-family: var(--secondary-font);
         font-weight: 800;
         font-size: 18px;
         line-height: 1.33;
-        display: flex;
-        align-items: center;
         letter-spacing: 0.03em;
         text-transform: uppercase;
+        margin-right: 76px;
 }
 .header-partlogo {
  color: #4D5AE5;   
 }
 
+.header-first {
+    display: flex;
+
+}
+
+.header-item:not(:last-child) {
+    margin-right: 40px;
+
+}
+
+.header-list {
+    display: flex;
+    margin-left:332px; 
+
+}
+
+.header-address:not(:last-child) {
+    margin-right: 40px;
+  
+}
+ 
+.nav-flex {
+    display: flex;
+   
+}
+
+.header-flex{
+    display: flex;
+}
+ 
+
+   
 .header-link {
     font-weight: 500;
         font-size: 16px;
@@ -95,6 +151,7 @@ list-style: none;
 
 .hero {
     background-color: #2E2F42;
+    padding: 188px 472px;
 }
 
 .title-hero {
@@ -103,7 +160,9 @@ list-style: none;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    color: #FFFFFF;}
+    color: #FFFFFF;
+    margin-bottom: 48px;
+}
 
 .button-hero {
     font-family:inherit;
@@ -111,7 +170,6 @@ list-style: none;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    display: flex;
     align-items: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
@@ -119,6 +177,11 @@ list-style: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
+    padding: 16px 32px;
+    
+   
+    
 }
 
  .button-hero:hover,
@@ -128,11 +191,17 @@ list-style: none;
 
     /* Section about */
 
+.about{
+    padding: 120px 156px;
+    background-color: aqua;
+}
+
 .about-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
   }
 
 .about-text {
@@ -142,23 +211,41 @@ list-style: none;
     letter-spacing: 0.02em;    
     color:var(--main-text-color);
 }
+
+.about-list{
+    display:flex;
+
+}
+ .about-item:not(:last-child) {
+     margin-right: 24px;}
    
     /* Section activity */
 
+.activity {
+padding-bottom: 120px;
+background-color: tan;
+}
 .activity-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
-    text-transform: capitalize;
-   
+    text-transform: capitalize;   
+    margin-bottom: 72px;
+}
+.activity-list {
+    display: flex;
+}
+.activity-item:not(:last-child) {
+    margin-right: 24px;
 }
 
     /* Section team */
 
         .team {
             background-color: #F4F4FD;
+            padding: 120px 156px;
         }
     
         .team-title { 
@@ -168,6 +255,7 @@ list-style: none;
             text-align: center;
             letter-spacing: 0.02em;
             text-transform: capitalize;
+            margin-bottom: 72px;
             }
     
         .team-subtitle {
@@ -176,7 +264,7 @@ list-style: none;
             line-height: 1.2;
             text-align: center;
             letter-spacing: 0.02em;
-                ;
+            margin-bottom: 8px;
         }
     
         .team-text {
@@ -187,11 +275,26 @@ list-style: none;
             letter-spacing: 0.02em;        
             color:var(--main-text-color);}
 
+        .team-list{
+            display:flex;
+        }
+        .team-item:not(:last-child) {
+            margin-right: 24px;}
+
+        .team-item > .part-card {
+            padding: 32px 16px;
+            background-color: #FFFFFF;
+            border-bottom-right-radius: 3px;
+            border-bottom-left-radius: 3px;
+} 
+
         /* Footer */
 
         .footer {
             background-color: #2E2F42;
+            padding: 100px 156px
                 }
+                
         
         .footer-logo {
             font-family: var(--secondary-font);
@@ -204,6 +307,7 @@ list-style: none;
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: #F4F4FD;
+            margin-bottom: 16px;
                 }
         
         .footer-partlogo {
@@ -215,11 +319,19 @@ list-style: none;
             font-size: 16px;
             line-height: 1.5;    
             letter-spacing: 0.02em;
-            color: #E7E9FC;}
+            color: #E7E9FC;
+            display: inline-block;
+            width:264px;
+        }
 
     /* Portfolio */
+    .portfolio {
+        background-color: aqua;
+        padding: 96px 0 120px;
+    }
 
         .portfolio-button{
+            padding: 12px 24px;
             font-family:inherit;
             font-style: normal;
             font-weight: 500;
@@ -256,6 +368,42 @@ list-style: none;
             color: var(--main-text-color);
                 }
 
+        .portfolio-list-btn{
+            display:flex;
+            padding-left: 0;
+            margin-bottom: 72px;
+            justify-content: center;
+            
+        }
 
+       
+        .portfolio-item-btn:not(:last-child) {
+            margin-right: 24px;
+
+        }
+ 
+        .portfolio-list{
+            display: flex;
+            flex-wrap: wrap;
+        
+        }
+        
+        .portfolio-item {
+            width: 360px; 
+            /* width: calc((100%-48px)/3); */
+           margin-right: 24px;  
+        }
+        .portfolio-item:nth-child(3n){
+            margin-right: 0; }
+        
 
                 
+.portfolio-item > .part-card {
+            padding:32px 16px; 
+            border-bottom: 1px solid #E7E9FC;
+            border-left: 1px solid #E7E9FC;
+            border-right: 1px solid #E7E9FC;
+
+
+        }
+       
