--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ margin: 0;
 .container{
     max-width: 1158px;
     margin: 0 auto;
-    outline: 1px solid tomato;
     padding-left: 15px;
     padding-right: 15px;
 
@@ -193,7 +192,6 @@ img{
 
 .about{
     padding: 120px 156px;
-    background-color: aqua;
 }
 
 .about-subtitle {
@@ -223,7 +221,7 @@ img{
 
 .activity {
 padding-bottom: 120px;
-background-color: tan;
+
 }
 .activity-title {
     font-weight: 700;
@@ -326,7 +324,6 @@ background-color: tan;
 
     /* Portfolio */
     .portfolio {
-        background-color: aqua;
         padding: 96px 0 120px;
     }
 
@@ -389,13 +386,16 @@ background-color: tan;
         }
         
         .portfolio-item {
-            width: 360px; 
-            /* width: calc((100%-48px)/3); */
+           width: 360px; 
            margin-right: 24px;  
+           margin-bottom: 48px;
         }
         .portfolio-item:nth-child(3n){
             margin-right: 0; }
-        
+
+        .portfolio-item:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+                }
 
                 
 .portfolio-item > .part-card {
